--- a/Intervar/templates/showdb.html
+++ b/Intervar/templates/showdb.html
@@ -1,14 +1,37 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<!--  A CSS class that have been used to change color of selected row in table. -->
-<style>
-  .highlight { background-color: red; }
-</style>
-
 <!-- Choose a row of a table and use some method on it. In this case, change background color. -->
 <script type=text/javascript>
   $(function() {
+    //hide a button and a form in a modal
+    $('#submitcDNARequest').hide();
+    $('#cDNARequest').hide();
+  //finn the comment field if a comment is present  
+  $('#comment').val('{{ patient_comment }}')
+  //on click, show a box & button for alamut request:
+  $('#show_arequest').click( function () {
+    $('#submitcDNARequest').show();
+    $('#cDNARequest').show();
+  });
+  //on click of: submitcDNARequest get value from: cDNARequest
+  $('#submitcDNARequest').click(function () {
+    var alamut_request = $('#cDNARequest').val()
+  // maa testes
+  $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronous=true", function(result){
+    $.ajax({
+      type: "POST",
+      contentType: "application/json; charset=utf-8",
+      url: "/showdb",
+      data: JSON.stringify(result),
+      success: function (data) {
+        alert("ferdig " + chrom +"-"+ start +" "+ stop +" "+ ref +" "+ alt)
+      },
+      dataType: "json"
+    });
+  }); 
+});
+  //Then run request
   //fill the patient info modal with info on the specific patient in case you want to alter some values.
   $('#pID_Modal').on('shown.bs.modal', function (e) {
     $('#sex').val('{{ pID_patient.sex }}');
@@ -20,25 +43,38 @@
   })
 //get from variant table @ click:
 $('#test tr').click(function () {
-
-  var chrom = $(this).closest("tr").find('td:eq(0)').text();
-  var start = $(this).closest("tr").find('td:eq(1)').text();
-  var stop = $(this).closest("tr").find('td:eq(2)').text();
-  var ref = $(this).closest("tr").find('td:eq(3)').text();
-  var alt = $(this).closest("tr").find('td:eq(4)').text();
+  var ID = $(this).closest("tr").find('td:eq(0)').text();
+  var chrom = $(this).closest("tr").find('td:eq(1)').text();
+  var start = $(this).closest("tr").find('td:eq(2)').text();
+  var stop = $(this).closest("tr").find('td:eq(3)').text();
+  var ref = $(this).closest("tr").find('td:eq(4)').text();
+  var alt = $(this).closest("tr").find('td:eq(5)').text();
+  $('#agene').text('')
+    $('#atrans').text('')
+    $('#agDNA').text('')
+    $('#aprot').text('')
+    $('#atype').text('')
+    $('#ahgmd').text('')
+    $('#adbsnp').text('')
+    $('#a1kg').text('')
+    $('#aESP').text('')
+    $('#aExac').text('')
+    $('aProtDom').text('')
   //alamut variables:
   $.getJSON($SCRIPT_ROOT + '/_return_alamut_for_variant', {
-    id: 1
+    id: parseInt(ID)
   }, function(data) {
     $('#agene').text(data.gene)
     $('#atrans').text(data.transcript)
     $('#agDNA').text(data.gNomen)
     $('#aprot').text(data.pNomen)
     $('#atype').text(data.codingEffect)
-    
-
-
-
+    $('#ahgmd').text(data.hgmdPhenotype)
+    $('#adbsnp').text(data.rsId)
+    $('#a1kg').text(data.rsMAF)
+    $('#aESP').text(data.espAllMAF+ "(" + data.espAltAllCount + "/" + data.espRefAllCount + ")" )
+    $('#aExac').text(data.exacAllFreq + "(" + data.exacAlleleCount + ")" )
+    $('aProtDom').text(data.proteinDomain1)
   });
   console.log("test")
   //$('.variant_info').html(chrom + " " + start + " " + stop);
@@ -46,14 +82,13 @@ $('#test tr').click(function () {
   //alert(chr + "|"+ start+ "|"+stop+ "|"+ref+ "|"+alt)
 });
 
-
  //Check if a ref & alt is letter as opposed to -. And also check if length == 1. This would mean missense.
- function isOneLetter(str) {
+  function isOneLetter(str) {
   return str.length === 1 && str.match(/[a-z]/i);
-}
-function isLetter(str) {
+  }
+  function isLetter(str) {
   return str.match(/[a-z]/i);
-}
+  }
 
 // Check if variant is:
 // missense
@@ -93,7 +128,6 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
 </script>
 <div class="container">
 	<div class="row">
-   <hr>
    <div class="col-md-10 col-xs-offset-1 col-md-offset-1">        
      <h1>Interpretation window for: {{ pID }}</h1>
    </div>
@@ -101,7 +135,6 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
  <div class="row">
   <div class="col-sm-5">
    <dl class="dl-horizontal">
-
     <dt>Patient ID</dt>
     <dd>{{ pID_patient.PID }}</dd>
     <dt>Family ID</dt>
@@ -146,10 +179,14 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
 <div class="col-sm-4"><h3>Interpretation comments:</h3></div>
 <div class="row">
   <div class="col-sm-6">
-    <div class="form-group">
-      <textarea class="form-control" rows="4" id="comment" placeholder="Insert comments here:"></textarea>
-    </div>
-    <button type="button" class="btn btn-primary" id="1">Update</button> 
+    <form action="{{ url_for('showdb') }}" method=POST enctype="multipart/form-data">
+      {{ iform.hidden_tag() }}
+      <fieldset class="form-group">
+        {{ iform.comment.label }}
+        {{ iform.comment(class="form-control", placeholder="This should fill with info is a comment is already present") }}
+      </fieldset>
+      {{ iform.submit(class="btn btn-primary") }}
+    </form>
   </div>
 </div>
 <div class="row"><hr></div>
@@ -165,7 +202,6 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
   <div class="col-sm-4"></div>
   <!-- Trigger the modal with a button -->
   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Enter variant</button>	
-
   <!-- Modal -->
   <div id="myModal" class="modal fade" role="dialog">
    <div class="modal-dialog">
@@ -210,8 +246,6 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
        </fieldset>
      </form>
      <button id="get_alamut" type="submit" class="btn btn-default">Get Alamut</button>
-
-     <hr><hr>
    </div>
    <div class="modal-footer">
      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -256,11 +290,11 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-
       </div>
     </div>
   </div>
 </div>
+
 <!-- Modal -->
 <div id="Interp_Modal" class="modal fade" role="dialog">
   <div class="modal-dialog modal-lg">
@@ -271,12 +305,21 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
         <h4 class="modal-title">Edit info for the variant in sample: {{ pID }}</h4>
       </div>
       <div class="modal-body">
-        <h3>This should contain some info</h3>
-        <p>And the info should be posted here..</p>
-        <p>Fill out with data from alamut_annotation table</p>
-        <p>Comment field for the variant and the variant in this sample.</p>
+        <h5>Comments regarding this specific variant?</h5>
+        <form action="{{ url_for('showdb') }}" method=POST enctype="multipart/form-data">
+          {{ ivform.hidden_tag() }}
+          <fieldset class="form-group">
+            {{ ivform.comments(class="form-control", placeholder="This should fill with info is a comment is already present") }}
+          </fieldset>
+          {{ ivform.submit(class="btn btn-primary") }}
+        </form>
+        <br>
         <p>Add a button for deleting the entry from this patients variant table.</p>
-        
+        <p id="show_arequest">Did you get the annotations from Alamut? If not, press here</p>
+        <input class="form-control" id="cDNARequest" name="cDNARequest" placeholder="NM_12341.4:c.234C>G" type="text" value="">
+        <br>
+        <input class="btn btn-primary" id="submitcDNARequest" name="cDNAsubmit" type="submit" value="submit">
+        <hr>
         <dl class="dl-horizontal">
           <dt>Gene</dt>
           <dd id="agene"></dd>
@@ -284,22 +327,22 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
           <dd id="atrans"></dd>
           <dt>gDNA</dt>
           <dd id ="agDNA"></dd>
-          <dt>Protein change</dt>
+          <dt>Protein change (the first)</dt>
           <dd id="aprot"></dd>
           <dt>Type of mutation</dt>
           <dd id="atype"></dd>
-          <dt>Zygosity</dt>
-          <dd></dd>
+          <dt>Protein domain</dt>
+          <dd id="aProtDom"></dd>
           <dt>Omim/HGMD</dt>
-          <dd></dd>
+          <dd id="ahgmd"></dd>
           <dt>dbSNP</dt>
-          <dd></dd>
-          <dt>1000 genomes</dt>
-          <dd></dd>
-          <dt>ESP</dt>
-          <dd></dd>
-          <dt>Exac</dt>
-          <dd></dd>
+          <dd id="adbsnp"></dd>
+          <dt>1000 genomes(?)</dt>
+          <dd id="a1kg"></dd>
+          <dt>ESP (all)</dt>
+          <dd id="aESP"></dd>
+          <dt>Exac (all)</dt>
+          <dd id="aExac"></dd>
           <dt>in_house_controls</dt>
           <dd></dd>
           <dt>Zygosity</dt>
@@ -309,23 +352,6 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
           <dt>Functional studies</dt>
           <dd></dd>
         </dl>
-        <p>...<p>
-          <form action="" method=POST enctype="multipart/form-data">
-            {{ pform.hidden_tag() }}
-            <fieldset class="form-group">
-            </fieldset>
-            <fieldset class="form-group">
-            </fieldset>
-            <fieldset class="form-group">
-            </fieldset>
-            <fieldset class="form-group">
-            </fieldset>
-            <fieldset class="form-group">
-            </div>
-          </fieldset>
-        </form>
-        
-        
         <!-- should contain two text inputs and a class selector along with a ACMGclass button-->
       </div>
       <div class="modal-footer">
@@ -334,7 +360,6 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
     </div>
   </div>
 </div>
-
 </div>
 </br></br></br>
 </div>
