--- a/Intervar/templates/base.html
+++ b/Intervar/templates/base.html
@@ -37,6 +37,7 @@
           <li><a href="/testinput">Input</a></li>
           <li><a href="/interpret">Interpret</a></li>
           <li><a href="/showdb">DB dump</a></li>
+          <li><a href="/report">Report</a></li>
           <li><a href="/logout">Logout</a></li>
           {% else %}
           <li><a href="/login">Login</a></li>
