--- a/Intervar/templates/overview.html
+++ b/Intervar/templates/overview.html
@@ -42,7 +42,7 @@
   <div class="col-sm-6">
    <dl class="dl-horizontal">
     <dt>Number of samples</dt>
-    <dd>100</dd>
+    <dd>{{ overview_dict.total_patients }}</dd>
     <dt>Samples PASS QC</dt>
     <dd>100</dd>
     
