--- a/Intervar/templates/showdb.html
+++ b/Intervar/templates/showdb.html
@@ -4,16 +4,7 @@
 <!-- Choose a row of a table and use some method on it. In this case, change background color. -->
 <script type=text/javascript>
   $(function() {
-    //hide a button and a form in a modal
-    $('#submitcDNARequest').hide();
-    $('#cDNARequest').hide();
-  //finn the comment field if a comment is present  
-  $('#comment').val('{{ patient_comment }}')
-  //on click, show a box & button for alamut request:
-  $('#show_arequest').click( function () {
-    $('#submitcDNARequest').show();
-    $('#cDNARequest').show();
-  });
+    $('#comment').val('{{ patient_comment }}')
   //on click of: submitcDNARequest get value from: cDNARequest
   $('#submitcDNARequest').click(function () {
     var alamut_request = $('#cDNARequest').val()
@@ -50,16 +41,16 @@ $('#test tr').click(function () {
   var ref = $(this).closest("tr").find('td:eq(4)').text();
   var alt = $(this).closest("tr").find('td:eq(5)').text();
   $('#agene').text('')
-    $('#atrans').text('')
-    $('#agDNA').text('')
-    $('#aprot').text('')
-    $('#atype').text('')
-    $('#ahgmd').text('')
-    $('#adbsnp').text('')
-    $('#a1kg').text('')
-    $('#aESP').text('')
-    $('#aExac').text('')
-    $('aProtDom').text('')
+  $('#atrans').text('')
+  $('#agDNA').text('')
+  $('#aprot').text('')
+  $('#atype').text('')
+  $('#ahgmd').text('')
+  $('#adbsnp').text('')
+  $('#a1kg').text('')
+  $('#aESP').text('')
+  $('#aExac').text('')
+  $('aProtDom').text('')
   //alamut variables:
   $.getJSON($SCRIPT_ROOT + '/_return_alamut_for_variant', {
     id: parseInt(ID)
@@ -69,12 +60,21 @@ $('#test tr').click(function () {
     $('#agDNA').text(data.gNomen)
     $('#aprot').text(data.pNomen)
     $('#atype').text(data.codingEffect)
-    $('#ahgmd').text(data.hgmdPhenotype)
+    $('#hgmdId').text(data.hgmdId)
+    $('#hgmdPhenotype').text(data.hgmdPhenotype)
+    $('#hgmdSubCategory').text(data.hgmdSubCategory)
+    $('#clinVarPhenotypes').text(data.clinVarPhenotypes)
     $('#adbsnp').text(data.rsId)
     $('#a1kg').text(data.rsMAF)
     $('#aESP').text(data.espAllMAF+ "(" + data.espAltAllCount + "/" + data.espRefAllCount + ")" )
     $('#aExac').text(data.exacAllFreq + "(" + data.exacAlleleCount + ")" )
-    $('aProtDom').text(data.proteinDomain1)
+    $('#aProtDom1').text(data.proteinDomain1)
+    $('#aProtDom2').text(data.proteinDomain2)
+    $('#aProtDom3').text(data.proteinDomain3)
+    $('#Exon').text(data.exon)
+    $('#alaclass').text(data.pathogenicityClass)
+    $('#granthamDist').text(data.granthamDist)
+    
   });
   console.log("test")
   //$('.variant_info').html(chrom + " " + start + " " + stop);
@@ -83,12 +83,12 @@ $('#test tr').click(function () {
 });
 
  //Check if a ref & alt is letter as opposed to -. And also check if length == 1. This would mean missense.
-  function isOneLetter(str) {
+ function isOneLetter(str) {
   return str.length === 1 && str.match(/[a-z]/i);
-  }
-  function isLetter(str) {
+}
+function isLetter(str) {
   return str.match(/[a-z]/i);
-  }
+}
 
 // Check if variant is:
 // missense
@@ -309,56 +309,96 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
         <h4 class="modal-title">Edit info for the variant in sample: {{ pID }}</h4>
       </div>
       <div class="modal-body">
+        
+        <div class="row">
+          <div class="col-sm-5">
+            <dl class="dl-horizontal">
+              <dt>Gene</dt>
+              <dd id="agene"></dd>
+              <dt>Transcript</dt>
+              <dd id="atrans"></dd>
+              <dt>gDNA</dt>
+              <dd id ="agDNA"></dd>
+              <dt>Protein change (the first)</dt>
+              <dd id="aprot"></dd>
+              <dt>Type of mutation</dt>
+              <dd id="atype"></dd>
+              <dt>Protein domain 1</dt>
+              <dd id="aProtDom1"></dd>
+              <dt>Protein domain 2</dt>
+              <dd id="aProtDom2"></dd>
+              <dt>Protein domain 3</dt>
+              <dd id="aProtDom3"></dd>
+              <dt>HGMD ID</dt>
+              <dd id="hgmdId"></dd>
+              <dt>HGMD pheno</dt>
+              <dd id="hgmdPhenotype"></dd>
+              <dt>HGMD class</dt>
+              <dd id="hgmdSubCategory"></dd>
+              <dt>Clinvar phenotype</dt>
+              <dd id="clinVarPhenotypes"></dd>
+              <dt>dbSNP</dt>
+              <dd id="adbsnp"></dd>
+              <dt>1000 genomes(?)</dt>
+              <dd id="a1kg"></dd>
+              <dt>ESP (all)</dt>
+              <dd id="aESP"></dd>
+              <dt>Exac (all)</dt>
+              <dd id="aExac"></dd>
+              <dt>Exon</dt>
+              <dd id="Exon"></dd>
+              <dt>Zygosity</dt>
+              <dd></dd>
+              <dt>Seen @ MGM</dt>
+              <dd></dd>
+              <dt>Functional studies</dt>
+              <dd></dd>
+            </dl>
+          </div>
+
+          <div class="col-sm-6">
+            <dl class="dl-horizontal">
+              <dt>AlamutClass</dt>
+              <dd id="alaclass">some text</dd>
+              <dt>Grantham score</dt>
+              <dd id="granthamDist"></dd>
+            </dl>
+          </div>
+        </div>
+        <hr>
         <h5>Comments regarding this specific variant?</h5>
         <form action="{{ url_for('showdb') }}" method=POST enctype="multipart/form-data">
           {{ ivform.hidden_tag() }}
+          
           <fieldset class="form-group">
             {{ ivform.comments(class="form-control", placeholder="This should fill with info is a comment is already present") }}
           </fieldset>
           {{ ivform.submit(class="btn btn-primary") }}
         </form>
         <br>
-        <p>Add a button for deleting the entry from this patients variant table.</p>
-        <p id="show_arequest">Did you get the annotations from Alamut? If not, press here</p>
-        <input class="form-control" id="cDNARequest" name="cDNARequest" placeholder="NM_12341.4:c.234C>G" type="text" value="">
-        <br>
-        <input class="btn btn-primary" id="submitcDNARequest" name="cDNAsubmit" type="submit" value="submit">
-        <hr>
-        <dl class="dl-horizontal">
-          <dt>Gene</dt>
-          <dd id="agene"></dd>
-          <dt>Transcript</dt>
-          <dd id="atrans"></dd>
-          <dt>gDNA</dt>
-          <dd id ="agDNA"></dd>
-          <dt>Protein change (the first)</dt>
-          <dd id="aprot"></dd>
-          <dt>Type of mutation</dt>
-          <dd id="atype"></dd>
-          <dt>Protein domain</dt>
-          <dd id="aProtDom"></dd>
-          <dt>Omim/HGMD</dt>
-          <dd id="ahgmd"></dd>
-          <dt>dbSNP</dt>
-          <dd id="adbsnp"></dd>
-          <dt>1000 genomes(?)</dt>
-          <dd id="a1kg"></dd>
-          <dt>ESP (all)</dt>
-          <dd id="aESP"></dd>
-          <dt>Exac (all)</dt>
-          <dd id="aExac"></dd>
-          <dt>in_house_controls</dt>
-          <dd></dd>
-          <dt>Zygosity</dt>
-          <dd></dd>
-          <dt>Seen @ MGM</dt>
-          <dd></dd>
-          <dt>Functional studies</dt>
-          <dd></dd>
-        </dl>
+
+        
+        
+        <a class="btn btn-primary" role="button" data-toggle="collapse" href="#cDNARequest_collapsible" aria-expanded="false" aria-controls="collapseExample">
+          Alamut request 
+        </a>
+        <div class="collapse" id="cDNARequest_collapsible">
+          <div class="well">
+            <input class="form-control" id="cDNARequest" name="cDNARequest" placeholder="NM_12341.4:c.234C>G" type="text" value="">
+            <br>
+            <input class="btn btn-primary" id="submitcDNARequest" name="cDNAsubmit" type="submit" value="submit">
+          </div>
+        </div>
+        
+        
+        <div class="btn-group">  
+        </div>
         <!-- should contain two text inputs and a class selector along with a ACMGclass button-->
       </div>
       <div class="modal-footer">
+        <a class="btn btn-primary" role="button">
+          Delete variant
+        </a>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
