--- a/Intervar/templates/base.html
+++ b/Intervar/templates/base.html
@@ -36,7 +36,7 @@
           <li><a href="/overview">Overview</a></li>
           <li><a href="/testinput">Input</a></li>
           <li><a href="/interpret">Interpret</a></li>
-          <li><a href="/showdb">DB dump</a></li>
+          <li><a href="/showdb/123_15">DB dump</a></li>
           <li><a href="/report">Report</a></li>
           <li><a href="/logout">Logout</a></li>
           {% else %}
