--- a/Intervar/templates/testinput.html
+++ b/Intervar/templates/testinput.html
@@ -22,6 +22,10 @@
                 {{ form.panel(class="form-control") }}
             </fieldset>
             <fieldset class="form-group">
+                {{ form.dis_category.label }}
+                {{ form.dis_category(class="form-control") }}
+            </fieldset>
+            <fieldset class="form-group">
                 {{ form.clinInfo.label }}
                 {{ form.clinInfo(class="form-control", placeholder="Enter clinical info about the patient") }}
             </fieldset>
