--- a/Intervar/templates/interpret.html
+++ b/Intervar/templates/interpret.html
@@ -11,7 +11,7 @@
         <input type="submit" style="position: absolute; left: -9999px"/>
       </form>
       <p class="text-muted">
-        Examples - Patient: <a href="http://0.0.0.0:8080/showdb/123_15">123_15</a>         
+        Examples - Patient: <a href="{{ url_for('showdb') }}/123_15">123_15</a>         
       </p>
       <div class="row" style="font-size: 16px;">
         <div class="col-md-8">
