--- a/Intervar/templates/showdb.html
+++ b/Intervar/templates/showdb.html
@@ -4,14 +4,14 @@
 <!-- Choose a row of a table and use some method on it. In this case, change background color. -->
 <script type=text/javascript>
   $(function() {
-    $('#comment').val('{{ patient_comment | safe }}')
+    $('#comment').val('{{ patient_comment }}')
     // hide ID col of table
-    $('#test td:nth-child(1),th:nth-child(1)').hide();
+    $('#variant_table td:nth-child(1),th:nth-child(1)').hide();
     // hide signed col of table
-    $('#test td:nth-child(14),th:nth-child(14)').hide();
+    $('#variant_table td:nth-child(14),th:nth-child(14)').hide();
     //tooltip on classes form selector
-    $('#inhouse_class').tooltip({'trigger':'focus', 'title': 'Inhouse Class'});
-    $('#acmg_class').tooltip({'trigger':'focus', 'title': 'ACMG Class'});
+    $('#inhouse_class').tooltip({'trigger':'focus', 'title': 'Inhouse Class', 'placement': 'right'});
+    $('#acmg_class').tooltip({'trigger':'focus', 'title': 'ACMG Class', 'placement': 'right'});
   //on click of: submitcDNARequest get value from: cDNARequest
   $('#submitcDNARequest').click(function () {
     var alamut_request = $('#cDNARequest').val()
@@ -40,7 +40,7 @@
     $('#fragmentSizeUpload').val('{{ pID_patient.fragmentSizeUpload }}');
   })
 //get from variant table @ click:
-$('#test tr').click(function () {
+$('#variant_table tr').click(function () {
   var ID = $(this).closest("tr").find('td:eq(0)').text();
   var chrom = $(this).closest("tr").find('td:eq(1)').text();
   var start = $(this).closest("tr").find('td:eq(2)').text();
@@ -48,7 +48,8 @@ $('#test tr').click(function () {
   var ref = $(this).closest("tr").find('td:eq(4)').text();
   var alt = $(this).closest("tr").find('td:eq(5)').text();
   var zyg = $(this).closest("tr").find('td:eq(6)').text()
-  
+  var comments = $(this).closest("tr").find('td:eq(12)').text()
+
   $('#agene').text('')
   $('#atrans').text('')
   $('#agDNA').text('')
@@ -83,9 +84,12 @@ $('#test tr').click(function () {
     $('#aProtDom3').text(data.proteinDomain3)
     $('#Exon').text(data.exon)
     $('#alaclass').text(data.pathogenicityClass)
-    $('#granthamDist').text(String(zyg)) // funker ikke
-    
-    $('#zygo').text()
+    $('#granthamDist').text(data.granthamDist)
+    $('#comments').val(comments)
+    $('#pub2varID').val(ID)
+    $('#zygo').text(zyg)
+    $('#mgmseen').text('Kommer!')
+    $('funcStud').text('Kommer!')
   });
   console.log("test")
   //$('.variant_info').html(chrom + " " + start + " " + stop);
@@ -194,7 +198,7 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
 <hr>
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3" >
-  <h5>Comment regarding this interpretation/analysis</h5>
+    <h5>Comment regarding this interpretation/analysis</h5>
     <form action="{{ url_for('showdb') }}/{{ pID }}" method=POST enctype="multipart/form-data">
       {{ iform.hidden_tag() }}
       <fieldset class="form-group">
@@ -231,42 +235,56 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
        <p>Fill inn variant identification and get data from Alamut</p>
        <form action="{{ url_for('showdb') }}/{{ pID }}" method=POST enctype="multipart/form-data">
         {{ form.hidden_tag() }}
-        <fieldset class="form-group">
-         {{ form.chrom.label }}
-         {{ form.chrom(class="form-control") }}
-       </fieldset>
-       <fieldset class="form-group">
-         {{ form.start.label }}
-         {{ form.start(class="form-control") }}
-       </fieldset>
-       <fieldset class="form-group">
-         {{ form.stop.label }}
-         {{ form.stop(class="form-control") }}
-       </fieldset>
-       <fieldset class="form-group">
-         {{ form.ref.label }}
-         {{ form.ref(class="form-control") }}
-       </fieldset>
-       <fieldset class="form-group">
-         {{ form.alt.label }}
-         {{ form.alt(class="form-control") }}
-       </fieldset>
-       <fieldset class="form-group">
-         {{ form.zyg.label }}
-         {{ form.zyg(class="form-control") }}
-       </fieldset>
-       <fieldset class="form-group">
-         {{ form.denovo.label }}
-         {{ form.denovo(class="form-control") }}
-       </fieldset>
-       <fieldset class="form-group">        
-         <div class="col-sm-2">
-           {{ form.submit(class="btn btn-primary") }}
+        <div class="row">
+          <div class="col-sm-6">
+            <fieldset class="form-group">
+             {{ form.chrom.label }}
+             {{ form.chrom(class="form-control") }}
+           </fieldset>
+         </div></div>
+         <div class="row">
+          <div class="col-sm-6">
+           <fieldset class="form-group">
+             {{ form.start.label }}
+             {{ form.start(class="form-control") }}
+           </fieldset>
+           <fieldset class="form-group">
+             {{ form.ref.label }}
+             {{ form.ref(class="form-control") }}
+           </fieldset>
+           <fieldset class="form-group">
+             {{ form.zyg.label }}
+             {{ form.zyg(class="form-control") }}
+           </fieldset>
          </div>
-       </fieldset>
-     </form>
-     <button id="get_alamut" type="submit" class="btn btn-default">Get Alamut</button>
+         <div class="col-sm-6">
+           <fieldset class="form-group">
+             {{ form.stop.label }}
+             {{ form.stop(class="form-control") }}
+           </fieldset>
+           <fieldset class="form-group">
+             {{ form.alt.label }}
+             {{ form.alt(class="form-control") }}
+           </fieldset>       
+           <fieldset class="form-group">
+             {{ form.denovo.label }}
+             {{ form.denovo(class="form-control") }}
+           </fieldset>
+         </div>
+       </div>
+       <div class="row">
+         <div class="col-sm-3">
+           <fieldset class="form-group">          
+             {{ form.submit(class="btn btn-primary") }}
+           </fieldset>
+         </form>
+       </div>
+       <div class="col-sm-2">
+         <button id="get_alamut" type="submit" class="btn btn-default">Get Alamut</button>
+       </div>
+     </div>
    </div>
+
    <div class="modal-footer">
      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
    </div>
@@ -331,7 +349,7 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
       <div class="modal-body">
 
         <div class="row">
-          <div class="col-sm-5">
+          <div class="col-sm-6">
             <dl class="dl-horizontal">
               <dt>Gene</dt>
               <dd id="agene"></dd>
@@ -382,9 +400,9 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
               <dt>Zygosity</dt>
               <dd id="zygo"></dd>
               <dt>Seen @ MGM</dt>
-              <dd></dd>
+              <dd id="mgmseen"></dd>
               <dt>Functional studies</dt>
-              <dd></dd>
+              <dd if="funcStud"></dd>
             </dl>
           </div>
         </div>
@@ -392,7 +410,7 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
         
         <!-- -->
         <h5 data-toggle="collapse" href="#publications_collapsible" aria-expanded="false" aria-controls="collapsePublications">
-        Add a publication
+          Add a publication
         </h5>
         <div class="collapse" id="publications_collapsible">
           <div class="well">
@@ -411,7 +429,10 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
                 </fieldset>
               </div>
               <fieldset class="form-group">
-                {{ pubForm.comment(class="form-control", placeholder="Comments/info") }}
+                {{ pubForm.pcomment(class="form-control", placeholder="Comments/info") }}
+              </fieldset>
+              <fieldset class="form-group">
+                {{ pubForm.pub2varID(class="form-control") }}
               </fieldset>
               <fieldset class="form-group">
                 {{ pubForm.submit(class="btn btn-primary") }}
@@ -446,14 +467,20 @@ $.getJSON("http://localhost:10000/show?request=" + alamut_request + "&synchronou
 
             {{ varIntForm.comments(class="form-control", placeholder="This should fill with info is a comment is already present") }}
           </fieldset>
-          <div class="input-group">
-            <fieldset class="form-group">
-              {{ varIntForm.inhouse_class(class="form-control") }}
-            </fieldset>
-
-            <fieldset class="form-group">
-              {{ varIntForm.acmg_class(class="form-control") }}
-            </fieldset>
+          <div class="row">
+            <div class="input-group">
+              
+              <div class="col-sm-6">
+                <fieldset class="form-group">
+                  {{ varIntForm.inhouse_class(class="form-control") }}
+                </fieldset>
+              </div>
+              <div class="col-sm-6">
+                <fieldset class="form-group">
+                  {{ varIntForm.acmg_class(class="form-control") }}
+                </fieldset>
+              </div>
+            </div>
           </div>
 
           <fieldset class="form-group">
